k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-lens-web
  labels:
    app: kube-lens-web
